Added some additional values as part of the FastenerDetails
* Added some additional values as part of the FastenerDetails and added corresponding enums. Updated instances that interact with the model.

* Updated CI workflow to reflect current project structure.

* Update terraform file formatting.

* Another iteration on the CI workflow.

* Another iteration on the CI workflow.

* Decided to remove the last terraform validation as it was overly heavy and unlikely to be a good use of resources

* Moved to trivy and added permissions

* Continued to configure trivy to meet a reasonable purpose.

* Continued to configure trivy to meet a reasonable purpose.

* Continued to configure trivy to meet a reasonable purpose.

* Addressing flagged security concerns.

* Addressing flagged security concerns.

* Fixing config error for API gateway

* Fixing config error for API gateway
