# api-lambda/src/main/java/com/gridgrizzly/api/model/FastenerDetails.java
@@ -3,7 +3,9 @@ package com.gridgrizzly.api.model;
 public record FastenerDetails(
         String subType,
         String driveType,
+        HeadType headType,
         String threadPitch,
+        ThreadType threadType,
         String length,
         String outsideDiameter,
         String insideDiameter,
