# api-lambda/src/main/java/com/gridgrizzly/api/model/ThreadType.java
@@ -1,0 +1,11 @@
+package com.gridgrizzly.api.model;
+
+public enum ThreadType {
+    METRIC,
+    UNC,
+    UNF,
+    UNEF,
+    NPT_BSPP,
+    BSPP,
+    _8UN,
+}
